# consuming-API

./: pyproject.toml
consuming_api/: main.py
